# mdops

./: .gitignore  Cargo.toml  README.md  benchmark.csv  broken_ascii.md
crates/mdtool-cli/: Cargo.toml
crates/mdtool-cli/src/: main.rs
crates/mdtool-core/: Cargo.toml
crates/mdtool-core/proptest-regressions/processing/: normalize.txt
crates/mdtool-core/src/: error.rs  lib.rs  primitives.rs
crates/mdtool-core/src/ascii/: detect.rs  format.rs  mod.rs  model.rs
crates/mdtool-core/src/builder/: tree_builder.rs
crates/mdtool-core/src/domain/: block.rs  block_node.rs  container_blocks.rs  document.rs  leaf_blocks.rs  mod.rs  policy.rs  response.rs  section.rs  selectors.rs
crates/mdtool-core/src/infrastructure/: mod.rs  normalizer.rs  parser.rs  policy_guard.rs
crates/mdtool-core/src/ops/: diff.rs  edit.rs  mod.rs  read.rs  resolve.rs  search.rs  semantic.rs  traverse.rs  write.rs
crates/mdtool-core/src/processing/: mod.rs  normalize.rs  validate.rs
crates/mdtool-core/src/services/: ascii_service.rs  block_service.rs  mod.rs  normalize_service.rs  parse_service.rs  validate_service.rs
crates/mdtool-mcp/: Cargo.toml
crates/mdtool-mcp/src/: main.rs  schema.rs
crates/mdtool-mcp/src/tools/: mod.rs
fixtures/: 01_basic_sections.md  02_messy_formatting.md  04_edge_cases.md
scripts/: benchmark.py  mcp_agent_test.py  mcp_bench.py  mcp_test.sh
specs/: concept.md
tests/: full_prd.md
