[workspace]
members = [
    "crates/mdtool-core",
    "crates/mdtool-cli",
    "crates/mdtool-mcp",
]
resolver = "2"

[workspace.dependencies]
comrak = "0.36"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
insta = "1"
proptest = "1"
rmcp = "0.1"
