[package]
name = "mdtool-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdtool"
path = "src/main.rs"

[dependencies]
mdtool-core = { path = "../mdtool-core" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
